--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,22 @@ dj-database-url==0.5.0
 Django==4.0
 django-autoslug==1.9.8
 django-ckeditor==6.2.0
+django-filter==21.1
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-material-admin==1.8.6
 django-tinymce==3.4.0
+djangorestframework==3.13.1
 gunicorn==20.1.0
+Markdown==3.3.6
 mysqlclient==2.1.0
 Pillow==8.4.0
+plotly==5.6.0
 psycopg2==2.9.3
+pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+tenacity==8.0.1
 tzdata==2021.5
 waitress==2.0.0
 whitenoise==5.3.0
